--- a/src/components/Grid.css
+++ b/src/components/Grid.css
@@ -70,7 +70,7 @@ body {
     color: #0099f7;
   }
 
-  @media (max-width: 320px) {
+  @media (min-width: 320px) and (max-width: 425px) {
     .container {
       margin-left: 10px;
       margin-right: 10px;
