--- a/src/components/Grid.css
+++ b/src/components/Grid.css
@@ -30,6 +30,32 @@ body {
     font-size: 1.5rem;
     color: #444;
   }
+
+button {
+  background-color: transparent;
+  color: grey;
+  border: none;
+  padding: 7px 20px;
+  cursor: pointer;
+  border: 1px solid grey; 
+  margin: 10px;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+button:hover {
+  
+  border: 1px solid #0099f7; 
+}
+#colorScheme {
+  background-color: transparent;
+  color: grey;
+  padding: 5px 10px;
+  font-family: 'Courier New', Courier, monospace;
+}
+#colorScheme:hover {
+  border: 1px solid #0099f7; 
+}
+
   
   /* Default color scheme */
   .highlight.default {
